# films_app

./: .env  .gitignore  Makefile  README.md  docker-compose.yml
backend/API/: .example.env  Makefile  db_settings.py  main.py  models.py  pyproject.toml  repository.py  routers.py  settings.py
backend/API/apps/: models.py  repository.py
backend/API/apps/age_rating/: models.py
backend/API/apps/age_rating_routers/: crud.py  routers.py  shemas.py
backend/API/apps/client_routers/: crud.py  models.py  routers.py  shemas.py
backend/API/apps/employee_routers/: crud.py  models.py  routers.py  shemas.py
backend/API/apps/film_genre_routers/: crud.py  models.py  routers.py  shemas.py
backend/API/apps/film_info_routers/: crud.py  models.py  routers.py  shemas.py
backend/API/apps/grafics/: crud.py  routers.py
backend/API/apps/hall_routers/: crud.py  models.py  routers.py  shemas.py
backend/API/apps/place_routers/: crud.py  models.py  routers.py  shemas.py
backend/API/apps/reports/: crud.py  routers.py
backend/API/apps/session_info_routers/: crud.py  models.py  routers.py  shemas.py
backend/API/apps/ticket_info_routers/: crud.py  models.py  routers.py  shemas.py
backend/API/templates/: api.js  index.html  main.js
frontend/react-app/: package.json
frontend/react-app/public/: index.html
frontend/react-app/src/: App.css  App.js  index.css
frontend/react-app/src/components/: RowElement.css  RowElement.js
frontend/react-app/src/components/notification/: Notification.js
frontend/react-app/src/utils/: api.js  translate.js
(+6 files in other folders)
