[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Semyon <sorokaty0824@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.35"
pydantic = "^1.9.0"
python-dotenv = "^0.20.0"
uvicorn = "^0.17.6"
fastapi = "^0.75.2"
mysql = "^0.0.3"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
